--- a/_posts/2014-06-28-git-alias-setting.html
+++ b/_posts/2014-06-28-git-alias-setting.html
@@ -1,6 +1,6 @@
 ---
 layout: default_post
-title : git alias(别名设置命令)
+title : git 奇淫巧计篇
 ---
 
 
@@ -12,19 +12,15 @@ title : git alias(别名设置命令)
 
 
 
-<p>将git status 简化为git st</p>
+
 <p>
-	{% highlight html %}
-	$ git config --global alias.st status
+	{% highlight javascript %}
+	$ git config --global alias.st status       //将git status 简化为git st
 	{% endhighlight %}
 </p>
-
-
-
-<p>将git commit 简化为git cm</p>
 <p>
-	{% highlight html %}
-	$ git config --global alias.cm commit
+	{% highlight javascript %}
+	$ git config --global alias.cm commit      //将git commit 简化为git cm
 	{% endhighlight %}
 </p>
 
