change some blog's date

--- a/_posts/2012-08-06-function-language-feature.html
+++ b/_posts/2012-08-06-function-language-feature.html
@@ -141,7 +141,7 @@ var s3 = concat(s1, s2);
 
 
 <h3>函数式编程的缺点</h3>
-<h4>一：语言学习曲线陡峭，难度高</h4>
+<h4>语言学习曲线陡峭，难度高</h4>
 <p>函数式语言对开发者的要求比较高，学习曲线比较陡，而且很容易因为其灵活的语法控制不好程序的结构。</p>
 
 
