--- a/_posts/2014-06-28-git-alias-setting.html
+++ b/_posts/2014-06-28-git-alias-setting.html
@@ -1,13 +1,13 @@
 ---
 layout: default_post
-title : git 奇淫巧计篇
+title : Git 奇淫巧计篇
 ---
 
 
 
 
 
-<h3>git alias(别名设置命令)</h3>
+<h3>Git alias(别名设置命令)</h3>
 
 
 
