--- a/_posts/2014-09-17-css3-transction.html
+++ b/_posts/2014-09-17-css3-transction.html
@@ -1,12 +1,12 @@
 ---
 layout: default_post
-title : css3 transition的应用
+title : Css3 transition的应用
 ---
 
 
 
 
-<h3>css3 transition的应用</h3>
+<h3>Css3 transition的应用</h3>
 
 
 
