modified interview blog's answer

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -992,6 +992,16 @@ alert(d.b);
 
 
 <h4>2. 网站性能优化的方法有哪些？（高频率）</h4>
+<ul>
+    <li>减少HTTP请求数。</li>
+    <li>减少被请求文件的大小，较少请求数据占用的网络带宽。</li>
+    <li>通过版本化控制客户端的缓存。</li>
+    <li>删除页眉可有可无的内容。 如空格，注释。</li>
+    <li>让html标记有始有终（结束标签），减少浏览器的判断时间。</li>
+    <li>把Javascript移到HTML文件末尾。</li>
+    <li>网址后面加入一个反斜杠. www.maticsoft.com/220/ ，让服务器立即知道访问的是个文件夹。</li>
+    <li>图片采用BASE64编码，减少数据请求。</li>
+</ul>
 
 
 
