--- a/_posts/2013-11-24-html-engine.html
+++ b/_posts/2013-11-24-html-engine.html
@@ -61,13 +61,13 @@ title : Html页面的性能优化以及缓存处理
 <p><strong>10. 缓存区是区分大小写的，保持url大小写一致性。</strong></p>
 <p><strong>11. 让html标记有始有终（结束标签），减少浏览器的判断时间。</strong></p>
 <p><strong>12. 不用将全部内容塞入一个Table中。  因为Talbe要等内容加载完毕才显示出来。 如果某些内容有错，将拖延页面的访问速度。</strong></p>
-<p><strong>13. 把Javascript移到HTML文件末尾。</strong></p>
-<p><strong>14. JS会阻塞后面的页面的显示。</strong></p>
-<p><strong>15. 友情链接的学问， 尽量用文字。</strong></p>
+<p><strong>13. 把Javascript移到HTML文件末尾，JS会阻塞后面的页面的显示。</strong></p>
+<p><strong>14. 友情链接的学问， 尽量用文字。</strong></p>
 
-<p><strong>16. 优化图片。 Gif图片比较少，一般做Logo,按钮，表情。 PNG，做透明背景比较多。</strong></p>
-<p><strong>17. 网址后面加入一个反斜杠. www.maticsoft.com/220/ ，让服务器立即知道访问的是个文件夹。</strong></p>
-<p><strong>18. 指定图片的大小，让浏览器一目了然。</strong></p>
+<p><strong>15. 优化图片。 Gif图片比较少，一般做Logo,按钮，表情。 PNG，做透明背景比较多。</strong></p>
+<p><strong>16. 网址后面加入一个反斜杠. www.maticsoft.com/220/ ，让服务器立即知道访问的是个文件夹。</strong></p>
+<p><strong>17. 指定图片的大小，让浏览器一目了然。</strong></p>
+<p><strong>18. 图片采用BASE64编码，减少数据请求。</strong></p>
 
 
 
