change global style all range of  the blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -246,7 +246,7 @@ title : Web前端的一些面试考察的知识点
 <p>
     <ul class="li_no_disc">
         <li>
-            {% highlight html %}
+            {% highlight css %}
             /* 通过overflow的方式 */
 .overflow-clear{
     overflow:auto;/*或者 hidden,scroll,不包括visible */
@@ -255,7 +255,7 @@ title : Web前端的一些面试考察的知识点
             {% endhighlight %}
         </li>
         <li>
-            {% highlight html %}
+            {% highlight css %}
             /* display 的方式*/
 .display-clear{
     display:inline-block;
@@ -263,7 +263,7 @@ title : Web前端的一些面试考察的知识点
             {% endhighlight %}
         </li>
         <li>
-            {% highlight html %}
+            {% highlight css %}
             /* position的方式 */
 .position-clear{
     position:absolute;
@@ -271,7 +271,7 @@ title : Web前端的一些面试考察的知识点
             {% endhighlight %}
         </li>
         <li>
-            {% highlight html %}
+            {% highlight css %}
             /* 浮动方式 */
 .float-clear{
     float:left; /*或者right，不是none就行*/
@@ -279,7 +279,7 @@ title : Web前端的一些面试考察的知识点
             {% endhighlight %}
         </li>
         <li>
-            {% highlight html %}
+            {% highlight css %}
             /*zoom 的方式*/
 .zoom-clear{
     zoom:1;/* only for IE6.7 因为他们haslayout，ie8以后和标准浏览器都弱化了haslayout */
