--- a/_posts/2014-05-12-javascript-amazing1.html
+++ b/_posts/2014-05-12-javascript-amazing1.html
@@ -1,9 +1,9 @@
 ---
 layout: default_post
-title : Javascript的匿名函数
+title : Js特性（缺陷）之一 —— 变量提升
 ---
 
-<h3>Javascript的匿名函数</h3>
+<h3>Javascript的变量提升</h3>
 
 
 
@@ -30,6 +30,60 @@ var functionName = function(arg0,arg1){
 
 
 <p>函数声明和函数表达式之间的主要区别是前者会在代码执行前被加载到作用域中，而后者是在代码执行到那一行的时候才会有定义。另一个区别是函数声明会给函数指定一个名字，而函数表达式则创建一个匿名函数，然后将这个函数赋给一个变量。</p>
+
+
+
+
+<h4>函数作用域问题</h4>
+
+<p>
+	{% highlight html %}
+    var a = 1;
+    function saya(){
+        a = 10;
+        return;
+        function a(){
+            alert("I'm another a")
+        }
+    }
+    saya();
+    alert(a)     // 1
+	{% endhighlight %}
+</p>
+
+
+<p>
+	{% highlight html %}
+    var a = 1;
+    function saya(){
+        a = 10;
+        return;
+        alert("I'm another A")
+    }
+    saya(); 
+    alert(a)    //  10
+	{% endhighlight %}
+</p>
+
+
+<p>
+	{% highlight html %}
+    var a = 1;
+    function saya(){
+        a = 10;
+        return;
+        function abc(){
+            alert("I‘m abc")
+        }
+    }
+    saya();
+    alert(a)  // 10
+	{% endhighlight %}
+</p>
+
+
+
+
 
 
 
