--- a/_posts/2014-06-28-git-alias-transfer-protocol.html
+++ b/_posts/2014-06-28-git-alias-transfer-protocol.html
@@ -1,7 +1,29 @@
 ---
 layout: default_post
-title : Git 四种传输协议
+title : Git 技巧和传输协议
 ---
+
+
+
+
+
+<h3>Git alias(别名设置命令)</h3>
+
+
+
+
+
+<p>
+	{% highlight javascript %}
+	$ git config --global alias.st status       //将git status 简化为git st
+	{% endhighlight %}
+</p>
+<p>
+	{% highlight javascript %}
+	$ git config --global alias.cm commit      //将git commit 简化为git cm
+	{% endhighlight %}
+</p>
+
 
 
 
