--- a/_posts/2014-05-16-javascript-amazing2.html
+++ b/_posts/2014-05-16-javascript-amazing2.html
@@ -34,66 +34,117 @@ title : Js特性之二 —— 变量提升
     {% highlight javascript %}
     var name = "jack";
 function fn1(){
-    alert(name);
+    console.log(name);
 }
 fn1();       // jack
     {% endhighlight %}
-<p>此处弹出jack不错，再来：</p>
+<p>此处打印出jack不错，再来：</p>
     {% highlight javascript %}
     var name = "jack";
 function fn1(){
-    alert(name);
+    console.log(name);
     var name = "peter";
 }
 fn1();       // undefined
     {% endhighlight %}
-<p>此处并不会弹出“peter", 而是弹出undified 有些人回叙会不解？ 为什么会这样呢？</p>
+<p>此处并不会打印出“peter", 而是打印出undified 有些人会不解？ 为什么会这样呢？</p>
 <p>我们把上面的函数改写一下（内容没有变化）：</p>
     {% highlight javascript %}
     var name = "jack";
 function fn1(){
     var name;
-    alert(name);
+    console.log(name);
     name = "peter";
 }
 fn1();       // undefined
     {% endhighlight %}
-<p>释义：代码执行函数fn1，运行到执行alert语句的时候当前作用域（函数体内）只有变量name的定义，并没有赋值，所以alert语句打印出来的当然是undefined了。</p>
+<p>释义：代码执行函数fn1，运行到执行console语句的时候当前作用域（函数体内）只有变量name的定义，并没有赋值，所以console语句打印出来的当然是undefined了。</p>
 <p>然后，我们可以再次改写函数（内容有变化）：</p>
     {% highlight javascript %}
     var name = "jack";
 function fn1(){
     var name;
-    alert(name);
+    console.log(name);
     name = "peter";
-    alert(name);
+    console.log(name);
 }
 fn1();       // undefined peter
     {% endhighlight %}
-<p>这个时候，执行函数fn1，运行到执行第一条alert语句的时候当前作用域（函数体内）只有变量name的定义，并没有赋值，所以弹出undefined了，接着给变量name赋值，所以执行第二条alert语句的时候。变量name的值为peter，所以接着会打印peter出来。</p>
+<p>这个时候，执行函数fn1，运行到执行第一条console语句的时候当前作用域（函数体内）只有变量name的定义，并没有赋值，所以打印出undefined了，接着给变量name赋值，所以执行第二条console语句的时候。变量name的值为peter，所以接着会打印出peter来。</p>
+
+<p>似乎你觉得好像都理解了，那我们来进阶一下，看看另外的情况，我猜，你会...</p>
 
 
 
+<h3>然后（变化来了）</h3>
+<h4>如果我们给函数里面加上<strong>return</strong>语句的话：</h4>
+<p>我们再把函数改写一下（内容有变化）：</p>
+    {% highlight javascript %}
+    var name = "jack";
+function fn1(){
+    name = "peter";
+    return;
+    function name(){
+        console.log(name);
+    }
+}
+fn1();       
+console.log(name)   // jack
+    {% endhighlight %}
+<p>上面的例子等价于：</p>
+    {% highlight javascript %}
+    var name = "jack";
+function fn1(){
+    name = "peter";
+    return;
+    var name = function(){
+        console.log(name);
+    }
+}
+fn1();       
+console.log(name)   // jack
+    {% endhighlight %}
+<p>如果不好理解，写个佐证的例子：</p>
+    {% highlight javascript %}
+    var name = "jack";
+function fn1(){
+    name = "peter";
+    // return;
+    var name = function(){
+        console.log(name);
+    };
+    console.log(name);
+}
+fn1();       //  peter
+console.log(name)   // jack
+    {% endhighlight %}
 
-
-
-
-
-
-
-
-
-
-
-
+<p>继续改写（内容有变化）：</p>
+    {% highlight javascript %}
+    var name = "jack";
+function fn1(){
+    name = "peter";
+    return;
+    console.log(name);
+}
+fn1();      
+console.log(name)   // peter
+    {% endhighlight %}
+<p>可以看到打印出来的居然是peter，这个时候是不是“百撕不得骑姐”啊？为神马？肿么会介个样子啊？</p>
+<p>这里其实是另外的知识点
+    <ul>
+        <li>函数内显示var声明变量 ， 作用域为当前函数体，叫做局部变量；</li>
+        <li>函数内声明变量（非var方式），作用域为全局，叫做全局变量；</li>
+    </ul>
+</p>
+<p>所以可以看出，函数fn1里面的name = "peter"语句其实质是改变了外部的全局的变量name的值，所以最后打印出来的当然就是peter啦。</p>
+<p>哦，<strong>原来如此...</strong></p>
 
 
 
 
 <!-- 
 
-
-<p>会计师次啊会上来吃快点好吃的 </p>
 
 <p>
     {% highlight javascript %}
@@ -141,7 +192,6 @@ fn1();       // undefined peter
 
 
 
-<p>变量提升：顾名思义，就是把下面的东西提到上面。在JS中，就是把定义在后面的东东（变量或函数）提升到前面中定义。</p>
 
 
 
