modified javascript amazing blog

--- a/_posts/2014-05-16-javascript-amazing2.html
+++ b/_posts/2014-05-16-javascript-amazing2.html
@@ -115,7 +115,7 @@ function fn1(){
     };
     console.log(name);
 }
-fn1();       //  peter
+fn1();              // peter
 console.log(name)   // jack
     {% endhighlight %}
 
@@ -133,18 +133,33 @@ console.log(name)   // peter
 <p>可以看到打印出来的居然是peter，这个时候是不是“百撕不得骑姐”啊？为神马？肿么会介个样子啊？</p>
 <p>这里其实是另外的知识点
     <ul>
-        <li>函数内显示var声明变量 ， 作用域为当前函数体，叫做局部变量；</li>
+        <li>函数内显示var声明变量 ， 作用域为当前函数体内，叫做局部变量；</li>
         <li>函数内声明变量（非var方式），作用域为全局，叫做全局变量；</li>
     </ul>
 </p>
 <p>所以可以看出，函数fn1里面的name = "peter"语句其实质是改变了外部的全局的变量name的值，所以最后打印出来的当然就是peter啦。</p>
+
+<p>那这个时候你会问，那为什么前面的例子怎么没有改变全局变量的值呢？是啊，为什么呢？</p>
+<p>我们来仔细看看：</p>
+    {% highlight javascript %}
+    var name = "jack";
+function fn1(){
+    name = "peter";
+    return;
+    function name(){
+        console.log(name);
+    }
+}
+fn1();       
+console.log(name)   // jack
+    {% endhighlight %}
+<p><strong>睁大眼睛看：</strong>这个函数体内看似name = "peter"是改变了全部变量name的值，其实是没有的。因为后面function name(){}的变量提升（hoisting）的存在，这个时候name = "peter"已经变成了局部变量的赋值语句，因为在它之前存在提升（hoisting）的定义语句，所以全局变量name的值是没有被改变的，打印出来的当然就是jack啦。</p>
 <p>哦，<strong>原来如此...</strong></p>
 
 
 
 
 <!-- 
-
 
 <p>
     {% highlight javascript %}
@@ -190,39 +205,13 @@ console.log(name)   // peter
     {% endhighlight %}
 
 
-
-
-
-
-
-
-
- 
-
-
-
 <h4>Declare Your Variables At the Top !</h4>
-
-
-
-
-
-
 
 
 <p class="pege_tail">参考<a href="http://blog.sina.com.cn/s/blog_912389e5010120n2.html" target="_blank">js之匿名函数</a></p>
 
 
-
-
  -->
-
-
-
-
-
-
-
 
 
 
