modified javascript amazing1 blog

--- a/_posts/2014-05-12-javascript-amazing1.html
+++ b/_posts/2014-05-12-javascript-amazing1.html
@@ -7,7 +7,7 @@ title : Js特性之一 —— 链式作用域
 
 
 <p>
-    对于JavaScript新手来说scoping是最令人困惑的部分之一。事实上，不仅仅是新手，我遇到或很多有经验的JavaScript程序员也不能完全理解scoping。JavaScript的scoping如此复杂的原因是它看上去非常像C系语言的成员。请看下面的C程序： 
+    对于JavaScript新手来说scoping是最令人困惑的部分之一。事实上，不仅仅是新手，我遇到或很多有经验的JavaScript程序员也不能完全理解scoping。JavaScript的scoping如此复杂的原因是它看上去非常像C系语言的成员。 
 </p>
 
 <h4>函数作用域问题</h4>
