change global index list style

--- a/_posts/2014-09-18-html-tag-pre&code.html
+++ b/_posts/2014-09-18-html-tag-pre&code.html
@@ -1,12 +1,12 @@
 ---
 layout: default_post
-title : Html标签中的pre和code的区别
+title : Html的pre标签和code标签的区别
 ---
 
 
 
 
-<h3>Html标签中的pre和code的区别</h3>
+<h3>Html的pre标签和code标签的区别</h3>
 <p>此文就重点谈一下code标签和pre标签喽，谈谈他们的定义，区别，应用以及这两个家伙凑到一块应该怎么使用。以及当这两个标签嵌套使用时，不同的浏览器对这个嵌套的解析是什么。</p>
 
 
