modified resume pages

--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,8 @@
 	            color:#4ac383;
 	        }
 	        body{
-	            ackground-color: #f0f0f0;
 	            font-family: 'Microsoft Yahei', '\5FAE\8F6F\96C5\9ED1', Arial, 'Hiragino Sans GB', '\5B8B\4F53';
-	            font-size: 18px;
+	            /*font-size: 18px;*/
 	            color: #2f2f2f;
 	            text-shadow:none;
 	        }
@@ -54,7 +53,6 @@
 	            padding: 10px 0 10px 15px;
 	        }
 	        .author{
-	            padding: 40px 0;
 	            font-size: 60px;
 	            text-align: center;
 	            font-weight: bold;
@@ -77,6 +75,7 @@
 	            width: 50%;
 	            float: left;
 	            padding:10px 0;
+	            line-height:20px;
 	        }
 	        #main .itemIntro{
 	            font-size: 18px;
@@ -86,10 +85,6 @@
 	            width: 96%;
 	            margin: 0 auto;
 	            overflow: hidden;
-	        }
-	        .basicInfo .myPhone{
-	            font-size: 35px;
-	            vertical-align:middle;
 	        }
 
 
@@ -108,14 +103,15 @@
 		    <div class="basicInfo">
 		        <p class="title">个人概况</p>
 		        <ul>
-		            <li>工作经验: 五年</li>
-		            <li>期望待遇: 10K</li>
-		            <li>性别: 男</li>
-		            <li>出生年月: 1986年8月</li>
-		            <li>邮箱: yubiaobin1986@gmail.com</li>
-		            <li>QQ: 14203405</li>
-		            <li>现居住地: 广州</li>
-		            <li>电话: <span class="myPhone">18620109230</span></li>
+		        	<li>意向职位：Web前端开发工程师</li>
+		            
+		            <li>期望待遇： <strong>10K</strong></li>
+		            <li>工作经验：五年</li>
+		            <li>出生日期：1986年8月（男）</li>
+		            <li>邮箱：yubiaobin1986@gmail.com</li>
+		            <li>QQ：14203405</li>
+		            <li>现居住地：广州</li>
+		            <li>电话：<strong>18620109230</strong></li>
 		        </ul>
 		    </div>
 
