--- a/resume.html
+++ b/resume.html
@@ -170,7 +170,7 @@
 		            </li>
 		        	
 		        	<li>
-		        		<p>Android手机应用开发</p>
+		        		Android手机应用开发
 		        		<p class="itemIntro">
 		        			一个类似游戏盒子的手机应用，初期技术选型阶段选用Phonegap+Jquerymobile+Backbone 完成所有前端基础性页面并且和后端进行数据交互，做完发现前端列表数据很多时候滑动效果特别卡顿，后来就用 Phonegap + Ratchet + Backbone重构所有前端页面，最终完成该项目。
 		        		</p>
@@ -185,7 +185,7 @@
 		                <p>简介：主要承担html和css编写工作，参与部分开发联调。运用技术主要有：html5，css3，原生js和jQuery。</p>
 		            </li> -->
 		            <li>
-		        		<p><a target="_blank" href="http://www.52retail.com">www.52retail.com</a></p>
+		        		<span><a target="_blank" href="http://www.52retail.com">www.52retail.com</a></span>
 		        		<p class="itemIntro">一个SNS网站兼具E-SHOP功能，五天内完成所有前端基础性页面并且编写登录表单，忘记密码等等表单的验证以及E-SHOP相关的交互效果所需的Javascript脚本，项目时间紧急，但是最终保质保量的完成了项目。</p>
 		        	</li>
 		            <li>
