--- a/resume.html
+++ b/resume.html
@@ -165,12 +165,12 @@
 		        <p class="title">项目经验</p>
 		        <ul>
 		        	<li>
-		            	<p><a href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html" target="_blank">香港Canidae集团官方网站</a></p>
+		            	<span><a href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html" target="_blank">香港Canidae集团官方网站</a></span>
 		        		<p class="itemIntro">简介：客户对设计的美感要求比较高，一再改动易稿，最后在时间非常仓促的情况下顶住压力，快速而准确的重构页面。主要通过html5,css3等技术大进行动作模拟，页面具备很流畅的交互体验。</p>
 		            </li>
 		        	
 		        	<li>
-		        		Android手机应用开发
+		        		<span>Android手机应用开发</span>
 		        		<p class="itemIntro">
 		        			一个类似游戏盒子的手机应用，初期技术选型阶段选用Phonegap+Jquerymobile+Backbone 完成所有前端基础性页面并且和后端进行数据交互，做完发现前端列表数据很多时候滑动效果特别卡顿，后来就用 Phonegap + Ratchet + Backbone重构所有前端页面，最终完成该项目。
 		        		</p>
@@ -189,15 +189,15 @@
 		        		<p class="itemIntro">一个SNS网站兼具E-SHOP功能，五天内完成所有前端基础性页面并且编写登录表单，忘记密码等等表单的验证以及E-SHOP相关的交互效果所需的Javascript脚本，项目时间紧急，但是最终保质保量的完成了项目。</p>
 		        	</li>
 		            <li>
-		            	<p><a href="http://forester2.vizzhost.com/evolve/catalog/index.php" target="_blank">上海Evolve集团官方网站</a></p>
+		            	<span><a href="http://forester2.vizzhost.com/evolve/catalog/index.php" target="_blank">上海Evolve集团官方网站</a></span>
 		        		<p class="itemIntro">简介：www.52retail.com项目的公司官网，承担全部html,css,js编写工作。运用技术主要有：html5，jquery，fancybox等。</p>
 		            </li>
 		            <li>
-		            	<p><a href="http://forester3.vizzhost.com/max_yu/bucie_mobile/index.html" target="_blank">香港浸会大学国际学院手机网站</a></p>
+		            	<span><a href="http://forester3.vizzhost.com/max_yu/bucie_mobile/index.html" target="_blank">香港浸会大学国际学院手机网站</a></span>
 		        		<p class="itemIntro">简介：香港浸会大学国际学院手机网站，主要使用jqueryMobile,html5,css3等技术开发。</p>
 		            </li>
 		            <li>
-		            	<p><a href="http://forester2.vizzhost.com/dreamventions/html20131018/index.php" target="_blank">香港Espiratione购物网站</a></p>
+		            	<span><a href="http://forester2.vizzhost.com/dreamventions/html20131018/index.php" target="_blank">香港Espiratione购物网站</a></span>
 		        		<p class="itemIntro">简介：E-shop类型网站，负责html,css的重构，部分js功能调试。运用技术主要有：html，css2，原生js。</p>
 		            </li>
 		        </ul>
