--- a/resume.html
+++ b/resume.html
@@ -139,25 +139,25 @@
 		        <p class="title">掌握技术</p>
 		        <h2>做重构，设计出身，像素级还原</h2>
 		        <ul>
-		        	<li>熟练使用PhotoShop切图，像素级重构。</li>
+		        	<li>熟练使用PhotoShop切图，像素级重构</li>
 		        	<li>了解业界最新的扁平化设计趋势，响应式设计</li>
 		        </ul>
 		        <h2>写代码，逻辑清晰，代码精简</h2>
 		        	<ul>
-		        		<li>熟练掌握<strong>HTML</strong>以及ECMA5的规范以及HTML5新标签及CSS3样式及动画。</li>
+		            	<li>熟练掌握html标签，能写出语义合理，兼容性良好的网站结构</li>
+		        		<li>熟练掌握Css盒模型布局技术，编写代码命名规范、工整、符合WEB语义化</li>
+		        		<li>熟悉ECMA5的规范以及HTML5新标签及CSS3样式及动画</li>
 		        		<li>熟练使用jQuery，Zepto等库或框架</li>
-		            	<li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
-		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
-		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目。</li>
-		        		<li>了解WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台进行数据交互，与后端工程师共同无障碍。</li>
-		        		<li>熟练使用GIT版本控制系统管理代码版本进行高效的修改，提交和发布代码。</li>
-		        		<li>熟练使用SublimeText2等类Emacs高效文本编辑器手写代码，高效快捷操作提升效率。</li>
-		        		<li>熟练使用Mac、Linux等常规终端命令。</li>
-		        		<li>了解网站后台脚本语言PHP，以及熟悉MySQL数据库等增删查改SQL语句操作。</li>
-		        		<li>了解脚本语言Python，以及了解Flask框架和Django框架。</li>
-		        		<li>熟练使用Trello以及Tower等团队协作项目管理平台。</li>
-		        		<li>善于使用Github以及Stackoverflow搜索技术方面疑难杂症并快速解决。</li>
-		        		<li>了解常用的Jinja2模板引擎以及Jekyll模板引擎。</li>
+		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目</li>
+		        		<li>熟悉WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台数据接口进行数据交互</li>
+		        		<li>熟练使用GIT版本控制系统管理代码版本进行高效的修改，提交和发布代码</li>
+		        		<li>熟练使用SublimeText2等类Emacs高效文本编辑器手写代码，高效快捷操作提升效率</li>
+		        		<li>熟练使用Mac、Linux等常规终端命令</li>
+		        		<li>了解网站后台脚本语言PHP，以及熟悉MySQL数据库等增删查改SQL语句操作</li>
+		        		<li>了解脚本语言Python，以及了解Flask框架和Django框架</li>
+		        		<li>熟练使用Trello以及Tower等团队协作项目管理平台</li>
+		        		<li>了解常用的Jinja2模板引擎以及Jekyll模板引擎</li>
+		        		<li>善于使用Github以及Stackoverflow搜索技术方面疑难杂症并快速解决</li>
 		        	</ul>
 		    </div>
 
