--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
 		        	<li>意向职位：Web前端开发工程师</li>
 		            
 		            <li>期望待遇： <strong>12K</strong></li>
-		            <li>工作经验：五年</li>
+		            <li>工作经验：五年以上（3年设计，2年前端开发）</li>
 		            <li>出生日期：1986年8月（男）</li>
 		            <li>邮箱：yubiaobin1986@gmail.com</li>
 		            <li>QQ：14203405</li>
