--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,7 @@
 	        }
 	        a:hover{
 	            color:#4ac383;
+	            /*color:#0d9ba9;*/
 	        }
 	        body{
 	            font-family: 'Microsoft Yahei', '\5FAE\8F6F\96C5\9ED1', Arial, 'Hiragino Sans GB', '\5B8B\4F53';
