add some answer on interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -991,6 +991,14 @@ alert(d.b);
 
 
 <h4>1. 谈谈对bootstrap的理解（高频率）</h4>
+<p>Bootstrap 属于前端 ui 库，通过现成的ui组件能够迅速搭建前端页面。同时还可以用less重新设计组件。对于前端技术一般的后台工程师，省去了很多编写前端处理时的痛苦。个人使用搭个博客什么的比较方便。</p>
+<p>
+    <ul>
+        <li>可以利用bootstrap 快速搭建跨平台的应用程序，而且特别优雅</li>
+        <li>它非常容易上手，和jquery非常像，让程序爱不释手  </li>
+        <li>我们可以不编写一行js代码就能实现js插件</li>
+    </ul>
+</p>
 
 
 
@@ -1009,6 +1017,7 @@ alert(d.b);
 
 
 <h4>3. 谈谈响应式布局（高频率）</h4>
+<p>自动适配屏幕，检测不同的屏幕用不同的html结构和不同的样式来呈现。</p>
 
 
 
