--- a/_posts/2014-08-12-javascript-array.html
+++ b/_posts/2014-08-12-javascript-array.html
@@ -33,30 +33,27 @@ title : Javascript数组和一些常用的数组方法
 <p>方法一：</p>
 
     {% highlight javascript %}
-Array.prototype.unique1 = function () {
-  var n = []; //一个新的临时数组
-  for (var i = 0; i < this.length; i++) //遍历当前数组
-  {
-    //如果当前数组的第i已经保存进了临时数组，那么跳过，
-    //否则把当前项push到临时数组里面
-    if (n.indexOf(this[i]) == -1) n.push(this[i]);
-  }
-  return n;
+Array.prototype.removeRepeat = function () {
+    var n = []; //一个新的临时数组
+    for (var i = 0; i < this.length; i++){    //遍历当前数组
+        //如果当前数组的第i已经保存进了临时数组，那么跳过，
+        //否则把当前项push到临时数组里面
+        if (n.indexOf(this[i]) == -1) n.push(this[i]);
+    }
+    return n;
 }
     {% endhighlight %}
 
 <p>方法二：</p>
 
     {% highlight javascript %}
-Array.prototype.unique2 = function(){
+Array.prototype.removeRepeat2 = function(){
     var n = {},r=[]; //n为hash表，r为临时数组
-    for(var i = 0; i < this.length; i++) //遍历当前数组
-    {
-            if (!n[this[i]]) //如果hash表中没有当前项
-            {
-                    n[this[i]] = true; //存入hash表
-                    r.push(this[i]); //把当前数组的当前项push到临时数组里面
-            }
+    for(var i = 0; i < this.length; i++) {    //遍历当前数组
+        if (!n[this[i]]) {     //如果hash表中没有当前项
+            n[this[i]] = true;    //存入hash表
+            r.push(this[i]);     //把当前数组的当前项push到临时数组里面
+        }
     }
     return r;
 }
@@ -65,13 +62,12 @@ Array.prototype.unique2 = function(){
 <p>方法三：</p>
 
     {% highlight javascript %}
-Array.prototype.unique3 = function(){
+Array.prototype.removeRepeat3 = function(){
     var n = [this[0]]; //结果数组
-    for(var i = 1; i < this.length; i++) //从第二项开始遍历
-    {
-            //如果当前数组的第i项在当前数组中第一次出现的位置不是i，
-            //那么表示第i项是重复的，忽略掉。否则存入结果数组
-            if (this.indexOf(this[i]) == i) n.push(this[i]);
+    for(var i = 1; i < this.length; i++) {    //从第二项开始遍历
+        //如果当前数组的第i项在当前数组中第一次出现的位置不是i，
+        //那么表示第i项是重复的，忽略掉。否则存入结果数组
+        if (this.indexOf(this[i]) == i) n.push(this[i]);
     }
     return n;
 }
@@ -83,15 +79,13 @@ Array.prototype.unique3 = function(){
 <p>方法四：</p>
 
     {% highlight javascript %}
-Array.prototype.unique4 = function(){
+Array.prototype.removeRepeat4 = function(){
     this.sort();
     var re=[this[0]];
-    for(var i = 1; i < this.length; i++)
-    {
-            if( this[i] !== re[re.length-1])
-            {
-                    re.push(this[i]);
-            }
+    for(var i = 1; i < this.length; i++) {
+        if( this[i] !== re[re.length-1]) {
+            re.push(this[i]);
+        }
     }
     return re;
 }
@@ -110,24 +104,21 @@ Array.prototype.unique4 = function(){
 
 	{% highlight javascript %}
 	var a1 = [1,2,3,4,5],
-        a2 = [-6,-4,0,1,3,5,7,8,10,12],
-        a3 = [],
-        l1 = a1.length,
-        l2 = a2.length,
-        l3 = l1 + l2,
-        i1,i2,i3;
+    a2 = [-6,-4,0,1,3,5,7,8,10,12],
+    a3 = [],
+    l1 = a1.length,
+    l2 = a2.length,
+    l3 = l1 + l2,
+    i1,i2,i3;
 
 for(i1=i2=i3=0;i3 < l3; i3++){        
-        if(i2 == l2 || a1[i1] < a2[i2])
-        {
-                a3[i3] = a1[i1];
-                i1 ++;
-        }
-        else
-        {
-                a3[i3] = a2[i2];
-                i2 ++;
-        }
+    if(i2 == l2 || a1[i1] < a2[i2]) {
+            a3[i3] = a1[i1];
+            i1 ++;
+    } else {
+            a3[i3] = a2[i2];
+            i2 ++;
+    }
 }
 
 alert(a3);  //-6,-4,0,1,1,2,3,3,4,5,5,7,8,10,12
