--- a/_posts/2014-08-12-javascript-array.html
+++ b/_posts/2014-08-12-javascript-array.html
@@ -6,12 +6,18 @@ title : Javascript数组和一些常用的数组方法
 
 
 
-<h3>Javascript数组的定义、创建和特性</h3>
+<h3>一般数组的定义、创建和特性</h3>
+
+
+
+
+
+
 
 
 
 <h4>什么是数组？</h4>
-<p>Javascript中数组对象用来在单独的变量名中存储一系列的（多个）值。</p>
+<p>数组对象用来在单独的变量名中存储一系列的（多个）值。</p>
 
 
 
@@ -47,7 +53,6 @@ alert(myArray[1])       //  peter
     {% endhighlight %}
 
 <p><strong>注：</strong>数组的索引index从0开始。</p>
-
 
 
 
@@ -93,7 +98,7 @@ object.constructor        //object是对象或函数的名称。
 objectName.prototype       //objectName 参数是object对象的名称。
     {% endhighlight %}
 
-<p> 用 prototype 属性提供对象的类的一组基本功能。 对象的新实例“继承”赋予该对象原型的操作。对于数组对象。</p>
+<p> 用 prototype 属性提供对象的类的一组基本功能。 对象的新实例“继承”赋予该对象原型的操作。</p>
 
 
 <h4>数组的方法</h4>
@@ -163,6 +168,60 @@ objectName.prototype       //objectName 参数是object对象的名称。
         </tr>
     </tbody>
 </table>
+
+
+
+
+
+
+
+
+
+
+
+
+<h3>Javascript中的数组的特性</h3>
+
+<p>如果正常来使用，JS里的数组与C、Java里的数组是相似的，都是由中括号包裹起来的一组元素。</p>
+<p><strong>但是：</strong></p>
+<p>与这些语言不同的是，JS里数组元素不一定要求是相同的数据类型。（换句话说，可以是不同的数据类型。）</p>
+
+    {% highlight javascript %}
+var arr = [1,3.1415,true,"hello",{}];
+    {% endhighlight %}
+
+<p>这样的数组在JS里是合法的。</p>
+<p>而且在JS里面，所有不是number,string,boolean,null,undefined这五种类型的数据都是object。即数组(array)也是一种对象。</p>
+<p>这样的话：</p>
+
+    {% highlight javascript %}
+var array1 = [];
+array1["first"] = "hello,";
+array1["second"] = "world";
+array1.three = "!"
+console.log(array1.length);       // 长度是0;
+console.log(array1.first);        // 值是hello,
+console.log(array1["three"]);     // 值是!
+    {% endhighlight %}
+
+<p>因为数组本质上是对象，所以JS对象的某些特性也可以用于数组上，如可以用delete方法来删除数组元素:</p>
+
+    {% highlight javascript %}
+var a = [1,2,3,4,5];  
+delete a[1];  
+console.log(a.length);     // 5
+console.log(a);            // [1, ,3,4,5]
+    {% endhighlight %}
+
+<p>delete语句会删掉元素，但不会删掉位置。</p>
+
+    {% highlight javascript %}
+var a = [0,1,2,3];  
+a[6] = 6;  
+console.log(a);           // [0,1,2,3,,,6] 
+    {% endhighlight %}
+
+<p>中间有两个位置是没有值的，但这样做是完全合法的。数组的长度会自动的从4增长到7。</p>
 
 
 
@@ -279,6 +338,7 @@ alert(a3);  //-6,-4,0,1,1,2,3,3,4,5,5,7,8,10,12
 
 
 <p class="pege_tail">参考<a href="http://www.w3school.com.cn/jsref/jsref_obj_array.asp" target="_blank">w3school——JavaScript Array 对象</a></p>
+<p>参考<a href="http://blog.csdn.net/codebistu/article/details/8044263" target="_blank">JS Array</a></p>
 
 
 
