add javascript feature blog

--- a/resume.html
+++ b/resume.html
@@ -145,8 +145,8 @@
 		        </ul>
 		        <h2>写代码，逻辑清晰，代码精简</h2>
 		        	<ul>
-		            	<li>熟练掌握html标签，能写出语义合理，兼容性良好的网站结构</li>
-		        		<li>熟练掌握Css盒模型布局技术，编写代码命名规范、工整、符合WEB语义化</li>
+		            	<li>熟练掌握HTML标签，能写出语义合理，兼容性良好的网站结构</li>
+		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化</li>
 		        		<li>熟悉ECMA5的规范以及HTML5新标签及CSS3样式及动画</li>
 		        		<li>熟练使用jQuery，Zepto等库或框架</li>
 		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目</li>
